Fixed pictures overlapping; fixed lists

--- a/style.css
+++ b/style.css
@@ -128,6 +128,12 @@ body.sidebar-left #content_top, body.sidebar-right #content_top{padding:10px; ma
 #content_top img{padding:5px;}
 
 #content_top h2{font-size:14px; font-weight:bold; padding:4px 8px; color:#6f6c64; }
+
+/* goods pictures fix */
+.add-to-cart { clear: both; }
+.product-info { float: right; clear: right; }
+.node .content li { margin-left: 1em; }
+
 /*Misc*/
 
 .submitted{color:#999999; font-size:10px;}
